--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 
 <html>
 <head>
-<meta charset="utf8">
-<title> BMI Website </title>
-<script src="script.js"></script>
+  <meta charset="utf8">
+  <title> BMI Website </title>
+  <link rel="stylesheet", href="stylesheet.css">
+  <script src="script.js"></script>
 </head>
   
 <body>
