--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf8">
     <title>BMI Website</title>
-    <link rel="stylesheet", href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <script src="script.js"></script>
   </head>
   
