Add error alert

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 
   <body>
     <h1>BMI Calculator Online Free Fast Download</h1>
+    <div id="input">
+      <label for="mass">Weight (Kg):</label>
+      <input type="number" id="mass" /><br /><br />
 
-    <label for="mass">Weight (Kg):</label>
-    <input type="number" id="mass" /><br /><br />
-
-    <label for="height">Height (cm):</label>
-    <input type="number" id="height" /><br />
-    <p id="result"></p>
-    <button onclick="bmi()">Calcular</button>
+      <label for="height">Height (cm):</label>
+      <input type="number" id="height" /><br />
+    </div>
+    <div id="output">
+      <p id="result"></p>
+      <button onclick="bmi()">Calcular</button>
+    </div>
   </body>
 </html>
