--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>BMI Website</title>
     <script src="script.js"></script>
   </head>
 
   <body>
+    <div id="imagebcg"></div>
+    <img id="img" alt="healthyRoutine" src="./images/healthy.jpeg" />
     <div class="container">
       <h1>BMI Calculator Online</h1>
       <div id="input">
