--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
     <div class="container">
       <h1>BMI Calculator Online</h1>
       <div id="input">
-        <label for="mass">Weight (Kg):</label>
-        <input type="number" id="mass" /><br /><br />
-
-        <label for="height">Height (cm):</label>
-        <input type="number" id="height" /><br />
+        <div id="label1">
+          <label for="mass">Weight (Kg):</label>
+          <input type="number" id="mass" /><br />
+        </div>
+        <div id="label2">
+          <label for="height">Height (cm):</label>
+          <input type="number" id="height" /><br />
+        </div>
       </div>
       <div id="output">
         <p id="result"></p>
-        <button onclick="bmi()">Calcular</button>
+        <button class="button" onclick="bmi()">Calcular</button>
       </div>
     </div>
   </body>
