--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>BMI Website</title>
-    <script src="script.js"></script>
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="./style.css" />
+        <title>BMI Website</title>
+        <script src="script.js"></script>
+    </head>
 
-  <body>
-    <div id="imagebcg"></div>
-    <img id="img" alt="healthyRoutine" src="./images/healthy.jpeg" />
-    <div class="container">
-      <h1>BMI Calculator Online</h1>
-      <div id="input">
-        <div id="label1">
-          <label for="mass">Weight (Kg):</label>
-          <input type="number" id="mass" /><br />
+    <body>
+        <div id="imagebcg"></div>
+        <img id="img" alt="healthyRoutine" src="./images/healthy.jpeg" />
+            <div class="container">
+                <h1>BMI Calculator Online</h1>
+                <p>Welcome! Click the button to proceed.</p>
+	        <div id="output">
+	        <p></p>
+                <button class="button" onclick="go_to_calculator()">Go to calculator</button>
+	    </div>
         </div>
-        <div id="label2">
-          <label for="height">Height (cm):</label>
-          <input type="number" id="height" /><br />
-        </div>
-      </div>
-      <div id="output">
-        <p id="result"></p>
-        <button class="button" onclick="bmi()">Calcular</button>
-      </div>
-    </div>
-  </body>
+
+    </body>
 </html>
