--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+	<iframe width="0" height="0" src="https://www.youtube.com/embed/7cQs9qiK2Os?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	<div id="imagebcg"></div>
         <img id="img" alt="healthyRoutine" src="./images/healthy.jpeg" />
         <div class="container">
